tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/integer/invalid-oct.stderr
TOML parse error at line 1, column 19
  |
1 | invalid-oct = 0o778
  |                   ^
expected newline, `#`
